jpa 使用方法,实体类中必须有主键@Id,和实体类中的@Entity,@Table(name="表名"),表名必须与数据库中一致,实体类名无需一致

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -8,8 +8,10 @@ spring:
     username: root
     password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
-
+  main:
+   allow-bean-definition-overriding: true
 mybatis:
   typeAliasesPackage: com.example.demo.generator
   mapperLocations: classpath:mapper/*.xml
   #configLocation: classpath:/mybatis-config.xml
+
