--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,7 @@
             <version>8.0.17</version>
             <scope>runtime</scope>
         </dependency>
-
+        <!--JPA-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
