--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.profiles.active=dev
+
+pagehelper.helperDialect=mysql
+
+pagehelper.reasonable=true
+
+pagehelper.supportMethodsArguments=true
+
+pagehelper.params=count=countSql
