jap与mybatis中的分页

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -13,7 +13,10 @@ spring:
 mybatis:
   typeAliasesPackage: com.example.demo.generator
   mapperLocations: classpath:mapper/*.xml
-  #configLocation: classpath:/mybatis-config.xml
+  configuration:
+    #打印mybatis中的sql
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
+  #configLocation: classpath:/mybatis-config.xml
 
 
