--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ pagehelper.reasonable=true
 pagehelper.supportMethodsArguments=true
 
 pagehelper.params=count=countSql
+spring.mvc.favicon.enabled=false
