rabbitmq 未完 2020年1月16日

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,19 @@
 spring.profiles.active=dev
-
 pagehelper.helperDialect=mysql
-
 pagehelper.reasonable=true
-
 pagehelper.supportMethodsArguments=true
-
 pagehelper.params=count=countSql
+
+
 spring.mvc.favicon.enabled=false
+spring.jpa.show-sql=true
+
+spring.data.mongodb.host=127.0.0.1
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=test
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=15672
+
+
+
